# banking-agent

./: .env.example  .env.oauth.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_NOTES.md  Makefile  PROJECT_SUMMARY.md  README.md  abc_bank_assistant_visa_theme.html  banking_dataset_config.json  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  prompts.py  test_adk_integration.py  tools.py
app/sub_agents/bigquery/: agent.py  prompts.py  tools.py
app/sub_agents/transaction/: agent.py
bq_agent/: agent.py  prompts.py
bq_agent/mcp_server/: README.md  server.py  tools.py
bq_agent/sub_agents/: __init__.py
bq_agent/sub_agents/bigquery/: agent.py  (+3 more)
customer-identity-service/: .env.example  Dockerfile  README.md  cloudbuild.yaml  requirements.txt
customer-identity-service/app/: config.py  dependencies.py  main.py
customer-identity-service/tests/: test_metadata.py  test_service.py
customer-identity-service/venv-3.11/: pyvenv.cfg
deployment/: local.py  remote.py
docs/: adk-agent.md  architecture-decisions.md  architecture.md  authentication.md  authorization.md  customer-identity-service.md  deployment.md  design-decisions.md
infra/bq_schema/: main.tf  outputs.tf  variables.tf
infra/data_scripts/: generate_data.py  test.py  upload_to_bigquery.py
mcp_server/: __init__.py  server.py  tools.py
nextjs/: package-lock.json  package.json
ref/: adk-docs.txt  fastmcp-doc.txt
ref/authn-adk-all-in-one/: README.md
src/: generate_data.py  test.py  upload_to_bigquery.py
terraform/: main.tf  outputs.tf  variables.tf
(+63 files in other folders)
