[project]
name = "banking-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.1.0",
    "fastmcp>=2.14.0",
    "google-adk>=1.22.1",
    "google-cloud-bigquery>=3.40.0",
    "google-genai==1.44.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
