[project]
name = "banking-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.4.0",
    "db-dtypes>=1.7.0",
    "faker>=40.1.0",
    "fastmcp>=2.14.0",
    "google-adk>=1.17.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-storage",
    "google-genai==1.44.0",
    "pandas>=2.3.3",
    "vertexai>=1.43.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

# Source - https://stackoverflow.com/a/79528002
# Posted by Gwang-Jin Kim, modified by community. See post 'Timeline' for change history
# Retrieved 2026-06-01, License - CC BY-SA 4.0

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["deployment", "bq_agent"]


[project.scripts]
bq-agent = "bq_agent:app"
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"
